--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,57 +1,80 @@
-.link {
-    text-decoration: line-through;
-    /* none | underline */
+/* .list-item:not(:last-child) {
+    margin-bottom: 12px;
+} */
+
+/* .list-item:last-child {
+    margin-bottom: 0;
 }
 
-.title {
-    text-transform: capitalize;
-}
+.list-item:first-child {
+    background-color: tomato;
+} */
 
-body {
-    /* text-align: justify; */
-    text-indent: 20px;
-    line-height: 1.36;
-}
 
-.text span {
-    letter-spacing: 12px;
-}
+/* .list-item:nth-child(an + b) {
 
-.text {
-    word-spacing: 12px;
-}
+} */
+/* n - лічильник - кожен раз збільшується на 1 */
 
-.subtitle {
-    text-shadow: 2px 2px 20px #ff0000, 5px 5px 5px #000000;
-    font-weight: 900;
-}
+/* а - з кого починаємо */
+/* b - крок */
 
-.poem {
-    white-space: pre-wrap;
-    font-size: 22px;
-    font-weight: 700;
-}
+/* парні значення */
+/* .list-item:nth-child(2n + 2) {
+    background-color: tomato;
+} */
 
-.subtitle {
-    font-style: italic;
-}
+/* n=0
+    2*0 + 2 = 2
+    2*1 + 2 = 4
+    2*2 + 2 = 6
+*/
+/* .list-item:nth-child(even) {
+    background-color: tomato;
+} */
 
-.main-text {
-    font-family: 'Times New Roman', Times, serif;
-}
 
-.first::first-letter {
-    text-transform: uppercase;
-    color: red;
-    font-size: 24px;
-}
+/* непарні */
+/* .list-item:nth-child(2n + 1) {
+    background-color: tomato;
+} */
 
-.first::selection {
-    background-color: #000;
-    color: #fff;
-}
+/* 
+    2*0 + 1 = 1
+    2*1 + 1 = 3
+    2*2 + 1 = 5
+*/
 
-.roboto {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
+/* .list-item:nth-child(odd) {
+    background-color: tomato;
+} */
+/* 
+.list-item:nth-child(5) {
+    background-color: tomato;
+} */
+
+/* .list-item:nth-child(-n + 5) {
+    background-color: tomato;
+} */
+
+/* .list-item:nth-child(3n + 3) {
+    background-color: tomato;
+} */
+
+/* 
+    3*0+3 = 3
+    3*1+3 = 6
+    3*2+3 = 9
+*/
+
+/* .list-item:nth-child(n + 7) {
+    background-color: tomato;
+} */
+
+/* .list-item:nth-last-child(-n + 3) {
+    background-color: tomato;
+} */
+
+.list-item:nth-child(6) {
+    background-color: tomato;
 }
