--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,80 +1,116 @@
-/* .list-item:not(:last-child) {
-    margin-bottom: 12px;
-} */
-
-/* .list-item:last-child {
-    margin-bottom: 0;
+a {
+    text-decoration: none;
 }
 
-.list-item:first-child {
+li {
+    list-style: none;
+}
+
+.nav {
     background-color: tomato;
-} */
+}
+
+.nav-list {
+    padding: 0;
+    margin: 0;
+    height: 500px;
+    display: flex;
+
+    /* flex-direction: row; */
+    /* flex-direction: row-reverse; */
+    /* flex-direction: column; */
+    /* flex-direction: column-reverse; */
+
+    /* justify-content: flex-start; */
+    /* justify-content: flex-end; */
+    /* justify-content: center; */
+    justify-content: space-between;
+    /* justify-content: space-around; */
+    /* justify-content: space-evenly; */
+
+    /* align-items: stretch; */
+    /* align-items: flex-start; */
+    /* align-items: flex-end; */
+    align-items: center;
+    /* align-items: baseline; */
+    
+    /* flex-wrap: nowrap; */
+    /* flex-wrap: wrap; */
+    /* flex-wrap: wrap-reverse; */
+
+    /* align-content: flex-start; */
+    /* align-content: flex-end; */
+    /* align-content: center; */
+    /* align-content: space-around; */
+    /* align-content: space-between; */
+    /* align-content: space-evenly; */
+}
+
+.nav-list-item {
+    padding: 6px;
+    background-color: #fff;
+    /* width: 250px; */
+
+    /* flex-grow: 0; */
+
+    flex-basis: 250px;
 
 
-/* .list-item:nth-child(an + b) {
 
-} */
-/* n - лічильник - кожен раз збільшується на 1 */
+}
 
-/* а - з кого починаємо */
-/* b - крок */
+.grow1 {
+    flex-grow: 1;
+}
 
-/* парні значення */
-/* .list-item:nth-child(2n + 2) {
+.grow2 {
+    flex-grow: 2;
+}
+
+.shrink1 {
+    flex-shrink: 1;
+}
+
+.shrink2 {
+    flex-shrink: 3;
+}
+
+.sidebar {
+    flex-basis: 250px;
     background-color: tomato;
-} */
+    /* max-width: 150px; */
+}
 
-/* n=0
-    2*0 + 2 = 2
-    2*1 + 2 = 4
-    2*2 + 2 = 6
-*/
-/* .list-item:nth-child(even) {
-    background-color: tomato;
-} */
+.section {
+    flex-grow: 1;
+    background-color: aqua;
+}
+
+main {
+    display: flex;
+    height: 100vh;
+}
+
+.self {
+    /* align-self: flex-start; */
+    /* align-self: flex-end; */
+    /* align-self: center; */
+    /* align-self: stretch; */
+    /* align-self: baseline; */
 
 
-/* непарні */
-/* .list-item:nth-child(2n + 1) {
-    background-color: tomato;
-} */
+}
 
-/* 
-    2*0 + 1 = 1
-    2*1 + 1 = 3
-    2*2 + 1 = 5
-*/
+.order1 {
+    order: 1;
+}
 
-/* .list-item:nth-child(odd) {
-    background-color: tomato;
-} */
-/* 
-.list-item:nth-child(5) {
-    background-color: tomato;
-} */
 
-/* .list-item:nth-child(-n + 5) {
-    background-color: tomato;
-} */
+.order2 {
+    order: 2;
+}
 
-/* .list-item:nth-child(3n + 3) {
-    background-color: tomato;
-} */
 
-/* 
-    3*0+3 = 3
-    3*1+3 = 6
-    3*2+3 = 9
-*/
-
-/* .list-item:nth-child(n + 7) {
-    background-color: tomato;
-} */
-
-/* .list-item:nth-last-child(-n + 3) {
-    background-color: tomato;
-} */
-
-.list-item:nth-child(6) {
-    background-color: tomato;
+.order3 {
+    order: 3;
 }
